# OpenTikTok

./: README  README.md  TroubleShoot  build.gradle  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/pag/: animation_border.pag  player_effect.pag  sport_scoring_perfect.pag
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/core/: ARContext.cpp
app/src/main/cpp/filters/: Filter3D.h  FilterBase.cpp  FilterBase.h  FilterGroup.cpp  FilterGroup.h  FilterOES.cpp  FilterOES.h  FilterTransactionAlpha.cpp  FilterTransactionAlpha.h  FilterYuv.h  ObjLoader.h
app/src/main/cpp/jni/: ARContextJni.cpp  RenderJni.cpp  YuvJni.cpp
app/src/main/cpp/utils/: SLColor.cpp  SLGLUtil.cpp  SLHandler.h  SLHandlerThread.h  SLMath.cpp  SLMath.h  SLMessage.cpp  SLMessageQueue.cpp  (+3 more)
avcore/: build.gradle
avcore/src/main/: AndroidManifest.xml
avcore/src/main/cpp/: CMakeLists.txt
avcore/src/main/cpp/core/: ARContext.cpp  ARContext.h
avcore/src/main/cpp/filters/: Filter3D.cpp  FilterBase.cpp  FilterBase.h  FilterTransactionAlpha.h  FilterYuv.cpp
avcore/src/main/cpp/include/opencv2/core/: ocl.hpp
avcore/src/main/cpp/include/opencv2/videoio/: videoio_c.h
avcore/src/main/cpp/include/platform/: SLPlatform.h
avcore/src/main/cpp/jni/: RenderJni.cpp  YuvJni.cpp
avcore/src/main/cpp/utils/: SLColor.h  SLGLUtil.h  SLHandler.cpp  SLHandlerThread.cpp  SLLooper.cpp  SLLooper.h  SLMath.cpp  SLMessage.h  SLResource.cpp  SLResource.h  SLSingleton.cpp  SLTimeRecord.cpp  SLTimeRecord.h  SLTimeUtil.cpp
gradle/wrapper/: gradle-wrapper.properties
(+248 files in other folders)
